# openapi/openapi.json
@@ -1310,10 +1310,23 @@
             "items": {
               "type": "string"
             }
+          },
+          "email": {
+            "type": "string",
+            "example": "admin@example.com",
+            "description": "Current administrator email"
+          },
+          "password": {
+            "type": "string",
+            "example": "123456",
+            "description": "Current administrator password",
+            "writeOnly": true
           }
         },
         "required": [
-          "roleIds"
+          "roleIds",
+          "email",
+          "password"
         ]
       },
       "Object": {
