# src/modules/users/dto/update-user-roles.dto.ts
@@ -1,5 +1,5 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { ArrayNotEmpty, ArrayUnique, IsArray, IsString } from 'class-validator';
+import { ArrayNotEmpty, ArrayUnique, IsArray, IsEmail, IsString, MinLength } from 'class-validator';
 
 export class UpdateUserRolesDto {
   @ApiProperty({ type: [String], example: ['role-author', 'role-reviewer'] })
@@ -8,4 +8,13 @@ export class UpdateUserRolesDto {
   @ArrayUnique()
   @IsString({ each: true })
   roleIds!: string[];
+
+  @ApiProperty({ example: 'admin@example.com', description: 'Current administrator email' })
+  @IsEmail()
+  email!: string;
+
+  @ApiProperty({ example: '123456', description: 'Current administrator password', writeOnly: true })
+  @IsString()
+  @MinLength(6)
+  password!: string;
 }
